WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165301
[CSS Parser] Fix font-variant parsing
https://bugs.webkit.org/show_bug.cgi?id=165301
Summary
[CSS Parser] Fix font-variant parsing
Dave Hyatt
Reported
2016-12-02 07:32:40 PST
[CSS Parser] Fix font-variant parsing
Attachments
Patch
(3.39 KB, patch)
2016-12-02 07:34 PST
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-02 07:34:39 PST
Created
attachment 295942
[details]
Patch
Dave Hyatt
Comment 2
2016-12-02 08:31:49 PST
Fixed in
r209237
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug