[CSS Parser] Fix font-variant parsing https://bugs.webkit.org/show_bug.cgi?id=165301

Reviewed by Zalan Bujtas.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeFontVariantEastAsian):
(WebCore::CSSPropertyParser::consumeFontVariantShorthand):
Fix a bug with font-variant-east-asian parsing where the id
was getting improperly consumed even when it didn't match.



Canonical link: https://commits.webkit.org/182917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209237 268f45cc-cd09-0410-ab3c-d52691b4dbfc